before d comments